# Sementic-Search-Module

./: .env.example  .gitignore  README.md  app.py  ingest.py  main.py  pyproject.toml
core/: chunker.py  database.py  embedding.py
